# msc

./: .gitignore  LICENSE  pyproject.toml
codes/: all_data_keys.md  all_spacecraft_data_binned_scaled_80_binned_v19_sample.p  data_binning.py  data_binning_lat.py  data_binning_time_dist.py  data_debug.py  data_scaling.py  data_separation.py  data_test.py  get_percentile.py  gp_ext.py  gp_test.py  gp_test_vp.py  histogram_plots.py  import_packages.py  indiv.py  key_list.txt  lat_long_plot.py  lat_long_plot_indv.py  mariner_data_download.ipynb  omni_data_comp.py  omni_median_values.py  omni_pickle_file.py  plot_check.py  plot_latitudes.py  plot_msc_ben.py  plot_msc_ben.txt  polar_plots.py  polar_plots_log.py  print_test.py  read_all_data.py  read_all_data_pickle.py  read_cassini_data.py  read_helios_data.py  read_horizons_data.py  read_omni_average_data.py  read_omni_average_data.txt  read_omni_data.py  read_pioneer_data.py  read_psp_data.py  (+11 more)
codes/tulasi/: plot_1200s_avgs.py  plotz_tq.py  sc_sr_ct_ra_fft.py  sc_sr_ct_ra_flipbook.py  sc_sr_ct_ra_hist.py  sc_sr_ct_ra_over_orbit.py  smooth.py  sr_ra_diff.py
codes/v2024.04/: comparison_19_20.py  comparison_19_20_unbinned.py  data_binning_2024.py  data_binning_2025.py  file_test.py  new_horizon.py  plot_msc_ben_2024.py  plot_msc_ben_2025.py  plot_msc_updated.py  read_data_20250326.py  read_horizons_data_2024.py  read_omni_data_2024.py  read_psp_data_2024.py  rename.py  test.py  write_all_data_sim_keys_2024.py
codes/v2024.1/: download_new_files.py  plot_msc_ben_2024.py  read_solo_data_2024.py
(+81 files in other folders)
