[tool.poetry]
name = "msc"
version = "0.1.0"
description = ""
authors = ["Ramiz Qudsi <qudsiramiz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
spacepy = "^0.4.1"
pandas = "^2.0.3"
matplotlib = "3.5.2"
scikit-learn = "^1.3.1"
bokeh = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
